@@ -2,8 +2,11 @@
 
 * segway: more informative error on memory progression failure
 * segway: now works on LSF even when LSF_UNIT_FOR_LIMITS has been changed
+* segway: add jobname to "queued" diagnostic messages
 * segway: log/res_usage.tab becomes log/jobs.tab
 * segway: add jobid, jobname to jobs.tab
+* segway: eliminate core dumps of jobs in LSF
+* segway: make job abnormal error handling more robust
 * docs updates
 
 0.1.14:
